# experimaestro-python

./: .flake8  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  cliff.toml  config.ini  hatch_build.py  mkdocs.requirements.txt  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini  vulture_whitelist.py
.agents/skills/experimaestro/: SKILL.md
.circleci/: config.yml
.github/: release.yaml
.github/workflows/: pytest.yml  python-publish.yml
app/: .gitignore  .nolluprc.js  CHANGELOG.md  README.md  package-lock.json  package.json  postcss.config.js  rollup.config.js  tsconfig.json  tsconfig.webpack.json  webpack.config.mts  webpack.config.ts
app/public/: index.html  login.html  manifest.json
app/sass/: App.scss  _jobs.scss
app/src/: Actions.tsx  App.css  App.js  App.svelte  App.tsx  ExperimentSelector.tsx  Experiments.jsx  Experiments.tsx  JobModal.tsx  LogViewer.tsx  Orphans.tsx  RunSelector.tsx  Services.tsx  StatusBadge.tsx  TaskDetail.jsx  TaskDetail.svelte  TaskDetail.tsx  TaskGraph.tsx  TaskJobs.svelte  TaskJobs.tsx  Tasks.jsx  Tasks.svelte  Tasks.tsx  Warnings.tsx  client.js  client.ts  clipboard.ts  format.ts  index.css  index.js  index.ts  index.tsx  logo.pxm  reducer.js  reducers.ts  sagas.js  setupProxy.js  store.js  store.ts  theme.jsx
app/src/components/: Confirmation.jsx
app/src/theme/: _jobs.scss  theme.scss
app/src/ui/: Confirmation.svelte  Messages.svelte  messages.tsx  notifications.ts
app/xp/: run.py
demo/: .gitrepo  README.md  requirements.txt
demo/mnist_xp/: data.py  experiment.py  learn.py
dev/: index.md
docker/: Dockerfile  build-nodejs.sh  build-patchelf.sh  build-poco.sh  build-ssh.sh  readme.md
docs/: Makefile  changelog.md  cli.md  concepts.md  configuration.md  documenting.md  experiments.md  faq.md  index.md  install.md  jupyter.md  mkdocs.md  requirements.txt  serialization.md  settings.md  style.css  tutorial.md
docs/connectors/: index.md
docs/experiments/: config.md  overview.md  plan.md  task.md
docs/launchers/: index.md
docs/source/: changelog.md  cli.md  conf.py  documenting.md  experiments.md  faq.md  index.md  interfaces.md  jupyter.md  serialization.md  services.md  settings.md  tutorial.md  utilities.md
docs/source/_static/: custom.css
docs/source/_templates/: layout.html
docs/source/api/: index.md
docs/source/connectors/: index.md
docs/source/demo/: .pre-commit-config.yaml  README.md  pyproject.toml  xpm_settings.yaml
docs/source/demo/mnist_xp/: data.py  experiment.py  learn.py  params.yaml
docs/source/development/: api.md  experiment.md  scheduler.md
docs/source/experiments/: actions.md  analysis.md  config.md  grid_search.md  plan.md  projects.md  task.md  workspace.md
docs/source/launchers/: index.md
experimaestro/: .gitignore  __init__.py  __main__.py  annotations.py  api.py  checkers.py  click.py  commandline.py  compat.py  connectors.py  constants.py  dependencies.py  environment.py  filter.py  generators.py  ipc.py  locking.py  mkdocs.py  mypy.py  notifications.py  process.py  register.py  registry.py  rpyc.py  run.py  scheduler.py  scriptbuilder.py  ssh.py  taskglobals.py  tokens.py  tqdm.py  typingutils.py  utils.py  workspace.py  xpmutils.py
experimaestro/connectors/: __init__.py  local.py  ssh.py
experimaestro/core/: arguments.py  objects.py  types.py
experimaestro/launcherfinder/: base.py  registry.py  specs.py
experimaestro/launchers/: __init__.py  decorator.py  direct.py  python.py  slurm.py  specs.py  unix.py
experimaestro/mkdocs/: __init__.py  base.py  metaloader.py  style.css
experimaestro/scheduler/: base.py  dependencies.py  environment.py  workspace.py
experimaestro/server/: __init__.py  ipc.py
experimaestro/server/data/: asset-manifest.json  index.css  index.html  index.js  manifest.json  precache-manifest.667669601e3a4b1cc6333054212a5e3c.js  precache-manifest.dee658b345c6df20285d2f32d20f32c9.js  service-worker.js
experimaestro/sphinx/: __init__.py
experimaestro/tests/: conftest.py  definitions_types.py  identifier.py  restart.py  restart_main.py  task_tokens.py  tasks.py  tasks2.py  test_annotations.py  test_findlauncher.py  test_forward.py  test_identifier.py  test_instance.py  test_objects.py  test_outputs.py  test_param.py  test_progress.py  test_snippets.py  test_ssh.py  test_tags.py  test_tasks.py  test_tokens.py  test_types.py  test_validation.py  token_reschedule.py  utils.py  validation.py
experimaestro/tests/connectors/: utils.py
experimaestro/tests/launchers/: common.py  test_local.py  test_slurm.py
experimaestro/tests/scripts/: waitforfile.py
experimaestro/tests/tasks/: all.py  foreign.py  subparams.py
experimaestro/tools/: jobs.py
experimaestro/utils/: __init__.py  asyncio.py  jobs.py  settings.py  yaml.py
experimaestro_tests/: test_forward.py  test_tasks.py  test_types.py  utils.py
scripts/: check-webui-build.sh  longtask.py  make-app-icon.py
src/experimaestro/: __init__.py  __main__.py  actions.py  annotations.py  click.py  commandline.py  copy_experiment.py  dynamic.py  exceptions.py  filewatcher.py  filter.py  generators.py  huggingface.py  ipc.py  locking.py  mypy.py  notifications.py  progress.py  rpyc.py  run.py  scriptbuilder.py  settings.py  taskglobals.py  tokens.py  typingutils.py  xpmutils.py
src/experimaestro/carbon/: __init__.py  base.py  codecarbon.py  region.py  storage.py  utils.py  zeus_apple.py  zeus_tracker.py
src/experimaestro/cli/: __init__.py  copy_experiment.py  filter.py  jobs.py  progress.py  refactor.py  skill.py
src/experimaestro/connectors/: __init__.py  local.py  ssh.py
src/experimaestro/core/: arguments.py  callbacks.py  context.py  identifier.py  objects.py  objects.pyi  partial.py  partial_lock.py  serialization.py  serializers.py  subparameters.py  types.py  utils.py
src/experimaestro/experiments/: __init__.py  cli.py  (+3 more)
test/: helloworld.py  test_forward.py
tests/: definitions_types.py  test_forward.py  test_tasks.py  test_types.py  utils.py
(+244 files in other folders)
