[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "experimaestro"
authors = [
    {name = "Benjamin Piwowarski", email = "benjamin@piwowarski.fr"}
]
description = "Experimaestro is a computer science experiment manager"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
keywords = ["experiment manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "arpeggio >=2,<3",
    "attrs >=23.1.0,<24",
    "click >=8",
    "decorator >=5,<6",
    "docstring-parser >=0.15,<1",
    "fasteners >=0.19,<1",
    "flask >=2.3,<3",
    "flask-socketio >=5.3,<6",
    "gevent >=25",
    "gevent-websocket >=0.10",
    "humanfriendly >=10",
    "huggingface-hub >0.17",
    "marshmallow >=3.20,<4",
    "mkdocs >=1.5,<2",
    "omegaconf >=2.3,<3",
    "peewee >=3.17,<4",
    "psutil >=7,<8",
    "pyparsing >=3.1,<4",
    "pyperclip >=1.8,<2",
    "pytools >=2023.1.1,<2024",
    "pyyaml >=6.0.1,<7",
    "requests >=2.31,<3",
    "rpyc >=5,<7",
    "sortedcontainers >=2.4,<3",
    "termcolor >=2.3,<3",
    "textual >=6",
    "tqdm >=4.66.1,<5",
    "typing-extensions >=4.2; python_version < \"3.12\"",
    "watchdog >=2",
]

[project.optional-dependencies]
dev = [
    "markdown-include>=0.8.1",
    "mkdocstrings[python]>=0.30.1",
    "mypy>=1.0",
    "pymdown-extensions>=10.16.1",
    "pytest>=8.4.1",
    "pytest-timeout>=2.4.0",
    "textual-dev>=1.8.0",
    "docutils>=0.18",
    "Pygments>=2.15",
]
ssh = [
    "paramiko>=3.3",
    "fabric>=3",
]

[project.urls]
Homepage = "https://github.com/experimaestro/experimaestro-python"
Documentation = "https://experimaestro-python.readthedocs.io/"
Repository = "https://github.com/experimaestro/experimaestro-python"
"Bug Tracker" = "https://github.com/experimaestro/experimaestro-python/issues"

[project.scripts]
experimaestro = "experimaestro.__main__:main"

[project.entry-points."mkdocs.plugins"]
experimaestro = "experimaestro.mkdocs:Documentation"

[project.entry-points."experimaestro.process"]
local = "experimaestro.connectors.local:LocalProcess"
slurm = "experimaestro.launchers.slurm:BatchSlurmProcess"

[project.entry-points."experimaestro.connectors"]
local = "experimaestro.connectors.local:LocalConnector"
ssh = "experimaestro.connectors.ssh:SshConnector"

[project.entry-points."experimaestro.tokens"]
unix = "experimaestro.tokens:CounterToken"

[project.entry-points.mypy]
experimaestro = "experimaestro.mypy:plugin"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/experimaestro/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/experimaestro"]

[tool.hatch.build.targets.wheel.force-include]
"src/experimaestro/server/data" = "experimaestro/server/data"
"src/experimaestro/sphinx/static/experimaestro.css" = "experimaestro/sphinx/static/experimaestro.css"
"src/experimaestro/mkdocs/style.css" = "experimaestro/mkdocs/style.css"
"src/experimaestro/tui/app.tcss" = "experimaestro/tui/app.tcss"

[tool.pydocstyle]
match-dir = '(?!tests)(?!resources)(?!docs)[^\.].*'
match = '(?!test)(?!setup)[^\._].*\.py'
inherit = false
ignore = "D200,D203,D213,D406,D407"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true

[tool.pytest.ini_options]
junit_family = "xunit2"
testpaths = ["src/experimaestro"]
norecursedirs = ["node_modules"]
log_format = "[%(levelname)s] %(asctime)s %(name)s [%(process)d/%(threadName)s]: %(message)s"
log_date_format = "%H:%M:%S"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
