[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "experimaestro"
authors = [
    {name = "Benjamin Piwowarski", email = "benjamin@piwowarski.fr"}
]
description = "Experimaestro is a computer science experiment manager"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
keywords = ["experiment manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "arpeggio >=2,<3",
    "attrs >=23.1.0,<24",
    "click >=8",
    "decorator >=5,<6",
    "docstring-parser >=0.15,<1",
    "fastapi >=0.109,<1",
    "filelock >=3.16,<4",
    "httpx >=0.26,<1",
    "humanfriendly >=10",
    "huggingface-hub >0.17",
    "marshmallow >=3.20,<4",
    "omegaconf >=2.3,<3",
    "psutil >=7,<8",
    "pyparsing >=3.1,<4",
    "pyperclip >=1.8,<2",
    "pytools >=2023.1.1,<2024",
    "pyyaml >=6.0.1,<7",
    "requests >=2.31,<3",
    "rpyc >=5,<7",
    "sortedcontainers >=2.4,<3",
    "termcolor >=2.3,<3",
    "textual >=6",
    "tqdm >=4.66.1,<5",
    "typing-extensions >=4.2; python_version < \"3.12\"",
    "uvicorn[standard] >=0.27,<1",
    "watchdog >=2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=8.4.1",
    "pytest-timeout>=2.4.0",
    "textual-dev>=1.8.0",
    "docutils>=0.18",
    "Pygments>=2.15",
]
docs = [
    "sphinx>=6",
    "myst-parser>=2.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-codeautolink>=0.15",
    "sphinx-copybutton>=0.5",
]
ssh = [
    "paramiko>=3.3",
    "fabric>=3",
]

[project.urls]
Homepage = "https://github.com/experimaestro/experimaestro-python"
Documentation = "https://experimaestro-python.readthedocs.io/"
Repository = "https://github.com/experimaestro/experimaestro-python"
"Bug Tracker" = "https://github.com/experimaestro/experimaestro-python/issues"

[project.scripts]
experimaestro = "experimaestro.__main__:main"

[project.entry-points."experimaestro.process"]
local = "experimaestro.connectors.local:LocalProcess"
slurm = "experimaestro.launchers.slurm:BatchSlurmProcess"

[project.entry-points."experimaestro.connectors"]
local = "experimaestro.connectors.local:LocalConnector"
ssh = "experimaestro.connectors.ssh:SshConnector"

[project.entry-points."experimaestro.tokens"]
unix = "experimaestro.tokens:CounterToken"

[project.entry-points.mypy]
experimaestro = "experimaestro.mypy:plugin"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/experimaestro/version.py"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/app",
    "/hatch_build.py",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/experimaestro"]

[tool.hatch.build.targets.wheel.force-include]
"src/experimaestro/webui/data" = "experimaestro/webui/data"
"src/experimaestro/sphinx/static/experimaestro.css" = "experimaestro/sphinx/static/experimaestro.css"
"src/experimaestro/tui/app.tcss" = "experimaestro/tui/app.tcss"

[tool.pydocstyle]
match-dir = '(?!tests)(?!resources)(?!docs)[^\.].*'
match = '(?!test)(?!setup)[^\._].*\.py'
inherit = false
ignore = "D200,D203,D213,D406,D407"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true

[tool.pytest.ini_options]
junit_family = "xunit2"
testpaths = ["src/experimaestro"]
norecursedirs = ["node_modules"]
log_format = "[%(levelname)s] %(asctime)s %(name)s [%(process)d/%(threadName)s]: %(message)s"
log_date_format = "%H:%M:%S"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mkdocs>=1.6.1",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "C90",    # mccabe complexity
    "T20",    # flake8-print
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.mccabe]
max-complexity = 25
