
[metadata]
name = experimaestro
version = 0.5.5
author = Benjamin Piwowarski
author-email = benjamin@piwowarski.fr
home-page = https://github.com/experimaestro/experimaestro-python
description = "Experimaestro is a computer science experiment manager"
long-description = file: README.md, CHANGELOG.md
long-description-content-type = text/markdown
license = GPL-3
license_file = LICENSE
platform = any
keywords = experiment manager
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
packages = find:
test_suite = experimaestro.tests
setup_requires =
    setuptools >=30.3.0

[options.extras_require]
ssh =
    paramiko
dev =
    docutils
    Pygments
test =
    tox

[options.entry_points]
console_scripts =
    experimaestro = experimaestro.__main__:main

[bdist_wheel]
universal = true

[sdist]
formats = zip

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions
    
[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
python_version = 3.7
warn_unused_ignores = True

[tool:pytest]
junit_family = xunit2
usefixtures = xpmdirectory
log_format = [%%(levelname)s] %%(asctime)s %%(name)s [%%(process)d/%%(threadName)s]: %%(message)s