
[metadata]
name = experimaestro
author = Benjamin Piwowarski
author_email = benjamin@piwowarski.fr
home_page = https://github.com/experimaestro/experimaestro-python
description = "Experimaestro is a computer science experiment manager"
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = GPL-3
license_files = LICENSE
platform = any
keywords = experiment manager
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
test_suite = experimaestro.tests
setup_requires =
    setuptools >= 65.0.0
    setuptools_scm
    wheel
install_requires = file: requirements.txt

[options.extras_require]
ssh =
    paramiko
dev =
    docutils
    Pygments
test =
    tox

[options.entry_points]
console_scripts =
    experimaestro = experimaestro.__main__:main
mkdocs.plugins =
    experimaestro = experimaestro.mkdocs:Documentation

# Experimaestro entry points

experimaestro.process =
    local = experimaestro.connectors.local:LocalProcess
    slurm = experimaestro.launchers.slurm:BatchSlurmProcess

# Connectors
experimaestro.connectors =
    local = experimaestro.connectors.local:LocalConnector
    ssh = experimaestro.connectors.ssh:SshConnector

# Launchers
experimaestro.launchers =
    unix = experimaestro.launchers.direct:DirectLauncher
    slurm = experimaestro.launchers.slurm:SlurmLauncher


# Launchers
experimaestro.tokens =
    unix = experimaestro.tokens:CounterToken

[bdist_wheel]
universal = true

[sdist]
formats = zip

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/, app/
max-line-length = 88
# See https://github.com/PyCQA/pycodestyle/issues/373
extend-ignore = E203

[mypy]
python_version = 3.8
warn_unused_ignores = True
